# Projekt1

./: CMakeLists.txt  CloudModifier.cpp  CloudModifier.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Interface.cpp  Interface.h  Note.cpp  Note.h  ScoreManager.cpp  conductor.cpp  conductor.h  main.cpp  repozytorium..gitignore
assets/music_sequence/: muzyka1.txt  muzyka2.txt  utwur1.txt
src/: CloudModifier.cpp  CloudModifier.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Interface.cpp  Interface.h  Note.cpp  Note.h  NoteType.cpp  NoteType.h  ScoreManager.cpp  ScoreManager.h  main.cpp
